# js-cgi

./: Cargo.toml  README.md
public/: index.html  ts.html
src/: lib.rs  main.rs  route.rs  scripts.rs
