[package]
name = "js-cgi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
rquickjs = "0.9.0"
regex = "1"
tower = { version="0.4",features=["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
urlencoding = "2"
